--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bootstrap": "^4.6.0",
     "dateformat": "^4.5.1",
     "font-awesome": "^4.7.0",
+    "formik": "^2.2.7",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-redux-form": "^1.16.14",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
